--- a/css/style.css
+++ b/css/style.css
@@ -175,21 +175,16 @@ p {
   margin-bottom: 50px;
 }
 
+.keyboard.upper-active {
+  text-transform: uppercase;
+}
+
 .key-item {
   margin-bottom: 0.6rem;
   border-radius: 3px;
   background: #eeebeb;
   width: 6rem;
   height: 6rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -webkit-box-shadow: 3px 3px 0 rgba(0, 0, 0, 0.5);
           box-shadow: 3px 3px 0 rgba(0, 0, 0, 0.5);
   -webkit-transition: all 0.3s ease-out;
@@ -199,6 +194,7 @@ p {
 
 .key-item_service {
   background: #ccc;
+  text-transform: none;
 }
 
 .key-item:hover {
@@ -209,6 +205,24 @@ p {
   -webkit-box-shadow: none;
           box-shadow: none;
   background: #aaa;
+}
+
+.key {
+  display: none;
+  width: 100%;
+  height: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.key_active {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .Tab, .Delete {
