--- a/scss/style.scss
+++ b/scss/style.scss
@@ -47,6 +47,9 @@ p{
     background: #fff;
     padding: 1.5rem 1.5rem 1rem;
     margin-bottom: 50px;
+    &.upper-active{
+        text-transform: uppercase;
+    }
 }
 .key-item{
     margin-bottom: 0.6rem;
@@ -54,14 +57,12 @@ p{
     background: #eeebeb;
     width: 6rem;
     height: 6rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     box-shadow: 3px 3px 0 rgba(0,0,0,0.5);
     transition: all 0.3s ease-out;
     cursor: pointer;
     &_service{
         background: #ccc;
+        text-transform: none;
     }
     &:hover{
         background: #aaa;
@@ -71,6 +72,17 @@ p{
         background: #aaa;
     }
 }
+.key{
+    display: none;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    &_active{
+        display: flex;
+    }
+}
+
 .Tab, .Delete{
     width: 8rem;
 }
