--- a/css/style.css
+++ b/css/style.css
@@ -175,7 +175,7 @@ p {
   margin-bottom: 50px;
 }
 
-.keyboard.upper-active {
+.keyboard.shift-active {
   text-transform: uppercase;
 }
 
@@ -190,6 +190,15 @@ p {
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
   cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .key-item_service {
@@ -205,24 +214,6 @@ p {
   -webkit-box-shadow: none;
           box-shadow: none;
   background: #aaa;
-}
-
-.key {
-  display: none;
-  width: 100%;
-  height: 100%;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.key_active {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
 }
 
 .Tab, .Delete {
