--- a/scss/style.scss
+++ b/scss/style.scss
@@ -47,7 +47,7 @@ p{
     background: #fff;
     padding: 1.5rem 1.5rem 1rem;
     margin-bottom: 50px;
-    &.upper-active{
+    &.shift-active{
         text-transform: uppercase;
     }
 }
@@ -60,6 +60,9 @@ p{
     box-shadow: 3px 3px 0 rgba(0,0,0,0.5);
     transition: all 0.3s ease-out;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     &_service{
         background: #ccc;
         text-transform: none;
@@ -72,17 +75,6 @@ p{
         background: #aaa;
     }
 }
-.key{
-    display: none;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-    &_active{
-        display: flex;
-    }
-}
-
 .Tab, .Delete{
     width: 8rem;
 }
